<resources>
    <string name="app_name">Simple Shopping List</string>

    <string name="item_overflow_add">Add Item</string>
    <string name="item_overflow_save_changes">Save Item</string>
    <string name="name_input_label">Item name</string>
    <string name="name_input_hint">Enter item name</string>
    <string name="price_input_label">Item price</string>
    <string name="price_input_hint">Enter item price</string>
    <string name="label_isBought">Purchased?</string>

    <string name="new_list">New List</string>
    <string name="rename_list">Rename List</string>
    <string name="delete_list">Delete List</string>
    <string name="delete_all_lists">Delete All Lists</string>

    <string name="option_edit_item">Edit Item</string>
    <string name="option_delete_item">Delete Item</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="confirmation_deletion_msg">Are you sure you want to delete this item?</string>
    <string name="hint_list_name_input">Enter list name</string>

    <string name="btn_sort_alphabetically">Sort A to Z</string>
    <string name="btn_sort_price">Sort Price</string>
    <string name="btn_delete_items">Delete Items</string>
    <string name="btn_get_items">Search Items</string>

    <string name="menu_item_sort_a_to_z">Sort A to Z</string>
    <string name="menu_item_sort_z_to_a">Sort Z to A</string>
    <string name="menu_item_sort_checked_a_to_z">Sort Checked Items (A to Z)</string>
    <string name="menu_item_sort_checked_z_to_a">Sort Checked Items (Z to A)</string>
    <string name="menu_item_sort_unchecked_a_to_z">Sort Unchecked Items (A to Z)</string>
    <string name="menu_item_sort_unchecked_z_to_a">Sort Unchecked Items (Z to A)</string>

    <string name="menu_item_sort_price_increasing">Sort Price (Increasing)</string>
    <string name="menu_item_sort_price_decreasing">Sort Price (Decreasing)</string>
    <string name="menu_item_sort_checked_price_increasing">Sort Price of Checked Items (Increasing)</string>
    <string name="menu_item_sort_checked_price_decreasing">Sort Price of Checked Items (Decreasing)</string>
    <string name="menu_item_sort_unchecked_price_increasing">Sort Price of Unchecked Items (Increasing)</string>
    <string name="menu_item_sort_unchecked_price_decreasing">Sort Price of Unchecked Items (Decreasing)</string>

    <string name="menu_item_delete_checked">Delete All Checked Items</string>
    <string name="menu_item_delete_unchecked">Delete All Unchecked Items</string>
    <string name="menu_item_delete_all">Delete All Items</string>

    <string name="menu_item_search_name">Search Items by Name</string>
    <string name="menu_item_search_keyword">Search Items by Keyword</string>
    <string name="menu_item_search_checked">Get All Checked Items</string>
    <string name="menu_item_search_unchecked">Get All Unchecked Items</string>
    <string name="menu_item_search_all">Get All Items</string>

    <string name="add_btn_description">Button that adds new item to list</string>
    <string name="list_icon_description">Icon that indicates list item</string>

    <string name="total_price">Total Price: $%.2f</string>

    <string name="ad_app_id">ca-app-pub-9305885979692873~1166847445</string>
    <string name="ad_unit_id">ca-app-pub-9305885979692873/3573518931</string>
</resources>
