<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/menu_item_search_all"
            android:title="@string/menu_item_search_all"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_item_search_checked"
            android:title="@string/menu_item_search_checked"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_item_search_unchecked"
            android:title="@string/menu_item_search_unchecked"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_item_search_name"
            android:title="@string/menu_item_search_name"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_item_search_keyword"
            android:title="@string/menu_item_search_keyword"
            app:showAsAction="never"/>

    </group>
</menu>